--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -710,6 +710,21 @@ in 4.3.1 need use order and offset
 
   </section>
 
+  <section class="singleCardOverlay  singleCardOverlayDisplayNone"   >
+
+    <div class="singleCardOverlayBackground"></div>
+
+<div class="singleCardContainer"></div>
+
+
+
+    <!--  <button class="nav noselect bottom">&#x25BC; </button> button would need to be not over the top of carousel button-->
+
+
+
+
+  </section>
+
 
 
 
