--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -2221,8 +2221,11 @@ pointer-events:none;
   visibility:inherit; /*I added*/
 }
 .cloud9-item {
-  width: auto;
-height:auto;
+  /*width: auto;
+height:auto;*/
+/*notice both in vw*/
+width:30vh;
+height:36vh;
   padding: 0;
   text-align: center;
   background-color: rgba(61, 9, 9, 0.8);
