--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -117,7 +117,7 @@ also cause a white space at bottom because now contributes to the height-->
 
   <template id="cardHyperlinkTemplate">
 
-<a class="hyperlinkAnchor" href="j"> <Img class="cardTechlinksImg"  alt="gitLink"> </a>
+<a class="hyperlinkAnchor" href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
 
   </template>
 
@@ -488,11 +488,8 @@ in 4.3.1 need use order and offset
 
                                 <% for (let i = 0; i<page3SecondBestCard.technologiesArray.length; i++) { %>
 
-                                  <form class="formTechBtn" action="/carousel" method="get">
-                                    <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3SecondBestCard.technologiesArray[i].technologyName %> >
-                                  <img type="image" class="cardTechlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
-                                </button>
-                                </form>
+                                  <img type="image" class="cardTechlinksImg aMarble" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+
 <% }%>
                           </div>
                           <div class="ribbonEnd">
