--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -510,6 +510,7 @@ height: 100px;
 
     background-size: 100%;
      pointer-events: auto;
+     cursor:pointer;
 }
 .aMarble::after {/*seem to need this or cant get click events in marble case*/
 content: "";
@@ -1534,7 +1535,7 @@ position:absolute;
 line-height:0;
 
 }
-
+.cardTechMarbleImgHolder{margin-bottom:2px;}
 .ribbonEnd{
   width:19px;
    background:transparent;
