example card now triggers animation to pg3 when closes

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -184,7 +184,7 @@ maybe even ajoining a space for the marble
     <div class="pg2CardContainer">
 
 <div class="scaleable-wrapper" >
-          <div class="aCard">
+          <div class="theExplanationCard">
             <div class="topRightRibbonArea">
 
 
