--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -510,7 +510,7 @@ height: 100px;
 
     background-size: 100%;
      pointer-events: auto;
-     cursor:pointer;
+     cursor:pointer
 }
 .aMarble::after {/*seem to need this or cant get click events in marble case*/
 content: "";
@@ -1348,6 +1348,100 @@ when refactor set the h's to the same font but different font sizes and have thi
   width: 19px;
   height:15px;/*inherit;*/
 }
+
+
+
+.theExplanationCard{
+background-image: url(/Images/cardTextures/favourites/w1.jpg);
+  background-repeat:repeat;
+  width:125px;
+  height:150px;
+  border: 2.5px solid black;
+  border-radius: 5px;
+ margin:auto auto;
+visibility:inherit;
+
+/*width:inherit;
+  height:inherit;*/
+  text-align: center;
+  /*background: pink;*/
+
+/*  transform: translate(0%, 0%);left:0;top:0; */
+/*  transform: translate(-50%, -50%);left:50%;top:50%;*/
+  transform: translate(0%, 50%);
+left:50%; top:0%;
+  transform-origin: top center;
+position:absolute;
+ z-index:1;/*added to help shadow layering*/
+/*  position:absolute;*/ /*z-index:inherit;*//*added to help shadow layering*/
+     transform-style: preserve-3d; /*dirty stacking sollution*/
+  pointer-events:all;
+
+}
+
+.theExplanationCard::after{
+
+  position:absolute;
+  content:"";
+  font-size:0;
+  width:80%;
+  height:80%;
+  right:1px;
+   bottom:1px;
+  box-shadow: 0px 0px 3px 3px white, 1px 1px 3px 3px black;
+z-index:-1;
+    transform: rotate(3deg);
+   transform: translateZ(-1px); /*dirty stacking sollution to get pseudo under acard*/
+     pointer-events:none;
+}
+
+/*for card sheen*/
+
+.theExplanationCard::before{
+    background: linear-gradient(140deg,
+    rgba(255,255,255,0) 10%,
+     rgba(255,255,255,0.2),
+     rgba(255,255,255,0) 12%,
+     rgba(255,255,255,0),
+    rgba(225, 225, 225, 0) 30%,
+     rgba(255, 255, 255, 0.3) 33%,
+      rgba(221,160,221, 0.2)38%,
+       rgba(255, 255, 255, 0.2),
+        rgba(255, 255, 0, 0.1),
+         rgba(255, 255, 255, 0.1),
+          rgba(255, 255, 0, 0.1),
+           rgba(255, 255, 255, 0.1) 43%,
+            rgba(255, 255, 255, 0),
+    rgba(225, 225, 225, 0) 80% ,
+      rgba(225, 225, 225, 0),
+       rgba(221,160,221, 0.2)88%,
+        rgba(255, 255, 255, 0.2),
+          rgba(255, 255, 0, 0.1),
+            rgba(255, 255,255, 0.2),
+             rgba(255, 255,255, 0.1),
+             rgba(255, 255, 255, 0),
+             rgba(255, 255, 255, 0) 94% );
+
+  content:"";
+  font-size:0;
+left:0;
+  top:0;
+  border-radius: 5px;
+visibility:inherit;
+      padding:0; margin:0;
+position:absolute;
+  pointer-events:none;
+  width:100%;
+  height:100%;
+  z-index:1;
+}
+
+
+
+
+
+
+
 
 
 
