--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -182,10 +182,8 @@ maybe even ajoining a space for the marble
 
 
 <div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
-
-<div class="cardTechMarbleImgHolder">
-             <Img class="cardTechlinksImg aMarble" src= ""alt="gitLink">
-             </div>
+<div class="exampleProjectRibbonWritingArea">
+<div class="exampleProjectRibbonWriting">Technology marbles</div></div>
 
 </div>
 <div class="ribbonEnd">
@@ -197,13 +195,13 @@ maybe even ajoining a space for the marble
 
             <div class="aCardWritingArea">
 
-            <div class="projectTitle"></div>
+            <div class="projectTitle"> Welcome </div>
   <img class="projectImage " src= alt="projectImg">
 
 
-             <div class="projectDescriptionSubtitle">Description</div>
-                   <div class="projectDescriptionText">Title</div>
-              </div> <div class="cardHyperlinksArea">
+             <div class="projectDescriptionSubtitle">This is me ^ </div>
+                   <div class="projectExampleDescriptionText">This is an example project card. By clicking the marbles a carousel of project cards related to the technology on the marble will appear. The cards have marbles on their ribbon too. And in the bottom left hyperlinks to videos and repositories with more information on the card's project. </div>
+              </div> <div class="cardHyperlinksArea">Hyperlink buttons will be found here!
 
 
 
@@ -211,7 +209,7 @@ maybe even ajoining a space for the marble
 
 
 
-                                                     <a href= "" ><Img class="cardHyperlinksImg" src= "" alt="gitLink"></a>
+
                     </div>
 
 
