giving single card it own blur so that it does not remove the carousel blur when it is closed but crousel isnt

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1884,6 +1884,9 @@ a.techAnchor{ /*dont actually use this seems not to be needed now*/
 .carouselBlur{
   filter:blur(5px);
 }
+.singleCardDisplayingBlur{
+  filter:blur(5px);
+}
 
 /*these going to be similar to carousel when refactor button working make them the same*/
 .singleCardOverlay{  position:fixed;
