--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -199,9 +199,9 @@ maybe even ajoining a space for the marble
   <img class="projectImage " src= alt="projectImg">
 
 
-             <div class="projectDescriptionSubtitle">This is me ^ </div>
+             <div class="projectDescriptionSubtitle">This is me     <i class="fas fa-caret-up"></i> </div>
                    <div class="projectExampleDescriptionText">This is an example project card. By clicking the marbles a carousel of project cards related to the technology on the marble will appear. The cards have marbles on their ribbon too. And in the bottom left hyperlinks to videos and repositories with more information on the card's project. </div>
-              </div> <div class="cardHyperlinksArea">Hyperlink buttons will be found here!
+              </div> <div class="cardHyperlinksArea"><div class="exampleCardHyperlinkWriting">Project's Hyperlinks</div>
 
 
 
