extracting make a card method

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -70,8 +70,9 @@ maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
 
-  <template id="cloud9CardTemplate">
-    <div class="cloud9-item">
+<template id="cloud9ItemTemplate">  <div class="cloud9-item">putTheCardHere</div></template>
+  <template id="cardTemplate">
+
       <div class="scaleable-wrapper" >
                               <div class="aCard">
                                 <div class="topRightRibbonArea">
@@ -95,7 +96,7 @@ also cause a white space at bottom because now contributes to the height-->
                                     </div>
                         </div>
     </div>
-  </div>
+
   </template>
 
   <template id="cardTechnologyButtonTemplate">
@@ -196,7 +197,7 @@ maybe even ajoining a space for the marble
             <div class="aCardWritingArea">
 
             <div class="projectTitle"> Welcome </div>
-  <img class="projectImage " src= alt="projectImg">
+  <img class="projectImage " src="Images\marbles\wellItsAFace.png" alt="projectImg">
 
 
              <div class="projectDescriptionSubtitle">This is me     <i class="fas fa-caret-up"></i> </div>
