--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -69,8 +69,12 @@ now i have more context
 maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
+<template id="page4TitleTemplate"> <div><div class='pg4Text'>Phil Tate </div> </div> </template>
+
+ <template id="cardHolderPG4Template"><div class=' cardPG4 ' style='top: 0px;left: 0px;'></div></template>
 
 <template id="cloud9ItemTemplate">  <div class="cloud9-item">putTheCardHere</div></template>
+
   <template id="cardTemplate">
 
       <div class="scaleable-wrapper" >
