--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -106,14 +106,14 @@ also cause a white space at bottom because now contributes to the height-->
   <template id="cardTechnologyButtonTemplate">
 
     <div class="cardTechMarbleImgHolder">
-                                            <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink">
+                                            <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink" value="Atom">
 </div>
 
   </template>
 
   <template id="cardHyperlinkTemplate">
 
-<a class="hyperlinkAnchor" href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+<a class="hyperlinkAnchor" href="j"> <Img class="cardHyperlinksImg"  alt="gitLink" > </a>
 
   </template>
 
@@ -141,18 +141,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li>   <div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
+          <li>   <div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"value="Codepen"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"value="Atom"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"value="C#"></div></li>
 
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"value="CSS"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"value="EJS"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"value="Git"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"value="Html"></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"value="JS"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"value="Mongo"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" value="nodeJS"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" value="Unity"></div></li>
 
         </ul>
     <div class="glassEffect"></div>
@@ -266,7 +266,7 @@ div for x axis one for y and the image itself for spin-->
         <div class="philProfileMarbleY">
           <div class="philProfileMarbleX">
 
-            <img class="philProfileMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
+            <img class="philProfileMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble" value="Me">
 
           </div>
         </div>
@@ -385,7 +385,7 @@ in 4.3.1 need use order and offset
 
     <div class="marbleOnShape1">
 <div class="aMarbleX"><div class="aMarbleY">
-                  <div class="aMarble aMarbleGlassEffect" name="techButton" value="la">
+                  <div class="aMarble aMarbleGlassEffect" name="techButton" value="nodeJS">
           <img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble">
 </div></div>
       </div>
@@ -394,7 +394,7 @@ in 4.3.1 need use order and offset
     <div class="marbleOnShape2">
 <div class="aMarbleX"><div class="aMarbleY">
                 <div class="aMarble aMarbleGlassEffect">
-          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
+          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"  value="C#">
 </div></div>
       </div>
     </div>
@@ -403,7 +403,7 @@ in 4.3.1 need use order and offset
 
 <div class="aMarbleX"><div class="aMarbleY">
           <div class="aMarble aMarbleGlassEffect invisible">
-          <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble">
+          <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble" value="Git">
 </div></div>
 
 </div>
