added value to div with aMarble now empy caracell coz no matchrs so need to change to be case agnostic, have list of names and produce all cards if tech not present

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -105,8 +105,8 @@ also cause a white space at bottom because now contributes to the height-->
 
   <template id="cardTechnologyButtonTemplate">
 
-    <div class="cardTechMarbleImgHolder">
-                                            <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink" value="Atom">
+    <div class="cardTechMarbleImgHolder" value="Atom">
+                                            <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink" >
 </div>
 
   </template>
@@ -141,18 +141,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li>   <div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"value="Codepen"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"value="Atom"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"value="C#"></div></li>
+          <li>   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
 
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"value="CSS"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"value="EJS"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"value="Git"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"value="Html"></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"value="JS"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"value="Mongo"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" value="nodeJS"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" value="Unity"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" ></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
 
         </ul>
     <div class="glassEffect"></div>
@@ -260,13 +260,13 @@ maybe even ajoining a space for the marble
 
       <!--lots issues with animations and transforms on same object overwriting so a
 div for x axis one for y and the image itself for spin-->
-      <div class="philProfileMarble aMarble">
+      <div class="philProfileMarble aMarble" value="Me">
 
 
         <div class="philProfileMarbleY">
           <div class="philProfileMarbleX">
 
-            <img class="philProfileMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble" value="Me">
+            <img class="philProfileMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble" >
 
           </div>
         </div>
@@ -393,8 +393,8 @@ in 4.3.1 need use order and offset
 
     <div class="marbleOnShape2">
 <div class="aMarbleX"><div class="aMarbleY">
-                <div class="aMarble aMarbleGlassEffect">
-          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"  value="C#">
+                <div class="aMarble aMarbleGlassEffect"  value="C#">
+          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble" >
 </div></div>
       </div>
     </div>
@@ -402,8 +402,8 @@ in 4.3.1 need use order and offset
     <div class="marbleOnShape3">
 
 <div class="aMarbleX"><div class="aMarbleY">
-          <div class="aMarble aMarbleGlassEffect invisible">
-          <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble" value="Git">
+          <div class="aMarble aMarbleGlassEffect invisible"value="Git">
+          <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble" >
 </div></div>
 
 </div>
