refactoring marble click so one function

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -730,6 +730,7 @@ in 4.3.1 need use order and offset
 <script src="Javascript/carousel.js" charset="utf-8"></script>
 <script src="Javascript/cards.js" charset="utf-8"></script>
 <script src="Javascript/gradLineYCalc.js" charset="utf-8"></script>
+<script src="Javascript/marble.js" charset="utf-8"></script>
 
 
   <script src="Javascript/testCode.js" charset="utf-8"></script>
