--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -631,15 +631,16 @@ content: "";
   /*although made y 140 doesnt seem able to disappear of bottom of the screen way it goes off top*/
 }
 .magnifierAffordanceAnim{
-   animation: magnifierSwingRight 0.5s ease-in-out 0s 2 alternate none running;} /*duration should match timeout on magnifierAffordance() should be double as we run twice*/
+   animation: magnifierSwingRight 1s ease-in-out 0s 1 normal none running;} /*duration should match timeout on magnifierAffordance() should be double as we run twice*/
 
 
 
 
    @keyframes magnifierSwingRight {
+     0%{   transform: rotate(90deg);}
      100% {
 
-       transform: rotate(90deg);
+       transform: rotate(0deg);
      }
    }
 
