--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -27,10 +27,10 @@
 
 </head>
 <!--put no scroll back in later-->
-<!--class="no Scroll"-->
+<!--class="noScroll"-->
 
 
-<body class="noScroll">
+<body>
 
 
 
