--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -638,7 +638,7 @@ in 4.3.1 need use order and offset
 
 
 
-      <div class="row">
+      <div class="row" id="firstRowCornerNav">
         <div class="col-sm-4">
           <i class="fas fa-expand-arrows-alt corner-links"></i>
         </div>
