now refresh moves screen position by doing it before reloads why doesnt work on reload no idea

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -240,7 +240,7 @@ maybe even ajoining a space for the marble
 
   </section>
 
-  <section class="bottomRightPage1 ">
+  <section class="bottomRightPage1 " id="viewStart">
     <!--<i class="fas fa-sort-up"></i>-->
 
 
@@ -281,7 +281,7 @@ div for x axis one for y and the image itself for spin-->
         <h1>
           <span class="delayAppear ">Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
             & full stack developer <br>
-            <span class=fontOrnaments delayAppear>o </span><span class="h1Subtitle"> fancy a drink </span><span class=fontOrnaments> p</span>
+            <span class="fontOrnaments delayAppear">o </span><span class="h1Subtitle" id="fancyADrink"> fancy a drink </span><span class=fontOrnaments> p</span>
           </span>
 
 
@@ -640,9 +640,10 @@ in 4.3.1 need use order and offset
 
       <div class="row" id="firstRowCornerNav">
         <div class="col-sm-4">
-          <i class="fas fa-expand-arrows-alt corner-links"></i>
+          <i class="fas fa-expand-arrows-alt corner-links" id="carouselOrFloatingBubbleMediaButtons"></i>
         </div>
         <div class="col-sm-4">
+          <!--replace with other website contact form-->
           <a href="mailto:philip.r.tate@gmail.com?&subject=Cool%20website%20we%20want%20to%20offer%20you%20a%20job&body=Amazing%20job%20goes%20here!">
           <i class="far fa-envelope corner-links"></i></a>
 
@@ -727,6 +728,7 @@ in 4.3.1 need use order and offset
   <script src="Javascript/pg2.js" charset="utf-8"></script>
   <script src="Javascript/pg3.js" charset="utf-8"></script>
   <script src="Javascript/pg4.js" charset="utf-8"></script>
+  <script src="Javascript/cornerNav.js" charset="utf-8"></script>
 
 <script src="Javascript/jquery.cloud9carousel.js" charset="utf-8"></script>
 <script src="Javascript/carousel.js" charset="utf-8"></script>
