--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -781,10 +781,11 @@ transform: perspective(400px) rotateY(73deg);
   color: black;
  border-width: 5px 8px 8px 5px;
 
+/*this transistions background but instant is better*/
  background: transparent;
-   transition: background 1s linear;
-   -webkit-transition: background 1s linear;
-   -moz-transition: background 1s linear;
+   transition: background 0.5s linear;
+   -webkit-transition: background 0.5s linear;
+   -moz-transition: background 0.5s linear;
 
 }
 
